# rust_db_proxy

./: Cargo.toml  README.md  build.rs  config.toml  tenant1.db
proto/: db_proxy.proto
src/: client.rs  config.rs  error.rs  main.rs  server.rs
src/connection/: mod.rs  odbc.rs  pool.rs
src/query/: executor.rs  mod.rs
src/server/: mod.rs  proto.rs  service.rs
src/tenant/: mod.rs  registry.rs
